--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,22 @@
 
+body{
+    
+}
+
+
+.answer{
+    color: whitesmoke;
+    text-align: center;
+    width: 100%;
+    font-size: 30px;
+    padding: 10px;
+    border: 3px groove whitesmoke;
+}
+
+.question{
+    color: white;
+     text-align: center;
+    width: 100%;
+    font-size: 40px;
+    margin-bottom: 100px;
+}
