--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,21 @@ body{
      text-align: center;
     width: 100%;
     font-size: 40px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+}
+.answer:hover{
+    background-color: lightgrey;
+    color: black;
+}
+#mainContent{
+    display: none;
+}
+#start{
+    padding:20px;
+    align-self: center;
+    background-color: whitesmoke;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    width: 50%;
+    margin-left: 25%;
 }
