--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,17 @@
     text-align: center;
     font-size: 30px;
 }
+.restart{
+    padding:20px;
+    align-self: center;
+    background-color: whitesmoke;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    width: 50%;
+    margin-left: 25%;
+    display: none;
 
+}
 .answer{
     color: whitesmoke;
     text-align: center;
